--- a/style.css
+++ b/style.css
@@ -13,6 +13,19 @@
     background-color: rgb(240, 245, 255);
 }
 
+.titulo__texto {
+    font-size: 28px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: rgb(54, 54, 189);
+}
+
+.titulo__parrafo {
+    position: absolute;
+    top: 540px;
+    right: 930px;
+    gap: 2px;
+}
+
 .button{
     display: flex;
     flex-direction:row;
@@ -27,18 +40,20 @@
     display: flex;
     flex-direction:column;
     width: 380px;
-    height:560px;
+    height:590px;
     align-items: center;
-    border: 0px;
+    font-size: 38px;
+    color: rgb(4, 12, 102);
+    
 }
 
 .button__encriptador {
     font-family: Arial, Helvetica, sans-serif;
-    border-radius: 10px;
-    width: 170px;
-    height: 48px;
-    font-size: 18px;
-    background-color: rgb(8, 15, 112);
+    border-radius: 24px;
+    width: 332px;
+    height: 67px;
+    font-size: 19.36px;
+    background-color: rgba(10, 56, 113,1);
     color: white;
 
 
@@ -46,12 +61,13 @@
 
 .button__desencriptador {
     font-family: Helvetica, sans-serif;
-    border-radius: 10px;
-    height: 48px;
-    width: 170px;
-    font-size: 18px;
-    border-color: rgb(8, 15, 112);
-    color: rgb(8, 15, 112);
+    border-radius: 24px;
+    border: 1px;
+    height: 67px;
+    width: 332px;
+    font-size: 19.36px;
+    border-color:  rgba(10, 56, 113,1);
+    color:rgba(10, 56, 113,1);
 }
 
 .codigo {
@@ -59,7 +75,7 @@
 }
 
 .texto2 {
-    border-radius: 18px;
+    border-radius: 24px;
     text-align: center;
     background-color: white;
     width: 30%;
