--- a/style.css
+++ b/style.css
@@ -1,84 +1,200 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
 
 
-.titulo {
-    
-    height: 42px;
+* {
+    margin: 0;
+    padding: 0;
 }
-
 .texto {
-    display: flex;
-    flex-direction:row;
+    position: relative;
+    width: 100vw;
+    height: 100vh;
     gap: 250px;
     background-color: rgb(240, 245, 255);
 }
 
-.titulo__texto {
-    font-size: 28px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: rgb(54, 54, 189);
-}
-
-.titulo__parrafo {
-    position: absolute;
-    top: 540px;
-    right: 930px;
-    gap: 2px;
+.terminos {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 150%;
+    color: #495057;
+    opacity: 0.8;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
 }
 
 .button{
     display: flex;
-    flex-direction:row;
-    gap: 40px;
-    height:28px;
-    justify-content: center;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 1% 0;
+    position: absolute;
+    width: 80%;
+    left: 12%;
+    top: 82%;
 
 }
 
 .button__input {
+    position: absolute;
     background-color: rgb(240, 245, 255);
     display: flex;
     flex-direction:column;
-    width: 380px;
-    height:590px;
-    align-items: center;
-    font-size: 38px;
-    color: rgb(4, 12, 102);
-    
+    width: 42%;
+    height:60%;
+    left: 12%;
+    top: 15%;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 150%;          
 }
 
+
 .button__encriptador {
-    font-family: Arial, Helvetica, sans-serif;
+    align-items: center;
+    justify-content: center;
+    padding: 2%;
+    gap: 8px;
+    width: 25%;
+    background-color: #0a3871;
     border-radius: 24px;
-    width: 332px;
-    height: 67px;
-    font-size: 19.36px;
-    background-color: rgba(10, 56, 113,1);
-    color: white;
-
-
+    font-family: "Inter";
+    font-size: 18px;
+    line-height: 19px;
+    text-align: center;
+    color: #fff;
 }
 
 .button__desencriptador {
-    font-family: Helvetica, sans-serif;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 2%;
+    gap: 8px;
+    width: 25%;
+    background: #d8dfe8;
+    border: 1px solid #0a3871;
     border-radius: 24px;
-    border: 1px;
-    height: 67px;
-    width: 332px;
-    font-size: 19.36px;
-    border-color:  rgba(10, 56, 113,1);
-    color:rgba(10, 56, 113,1);
-}
-
-.codigo {
-    border-radius: 12px;
-}
-
-.texto2 {
-    border-radius: 24px;
+    font-family: "Inter";
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 19px;
     text-align: center;
-    background-color: white;
-    width: 30%;
-    height: 600px;    
-    padding: 10px;
+    color: #0a3871;
 }
+
+.encriptador2 {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    width: 30%;
+    height: 90%;
+    left: 60%;
+    top: 5%;
+    background: #fff;
+    box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
+    border-radius: 32px;
+
+}
+
+#titulo-mensaje {
+    font-size: 44px;
+}
+
+.encriptador__mensaje{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1%;
+    gap: 16px;
+    position: absolute;
+    width: 100%;
+    top: 25%;
+    text-align: center;
+}
+
+.encriptador__mensaje  h2{
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 120%;
+    text-align: center;
+    color: #343a40;
+    width: 60%;
+}
+
+.encriptador__mensaje  p{
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    text-align: center;  
+    color: #495057;
+    width: 80%;
+}
+
+@media (max-width: 57.5em) {
+    .texto {
+      display: flex;
+      flex-direction: row;
+    }
+    .encriptador1 {
+      width: 100%;
+    }
+    .button__input {
+      width: 80%;
+      height: 60%;
+      left: 10%;
+      top: 5%;
+    }
+    .terminos {
+      width: 80%;
+      left: 10%;
+      top: 67%;
+      font-size: 16px;
+    }
+
+    .button {
+      width: 80%;
+      left: 10%;
+      top: 70%;
+    }
+    .button__encriptador,
+    .button__desencriptador {
+      width: 48%;
+      border-radius: 16px;
+    }
+    .button__encriptador:hover,
+    .button__desencriptador:hover {
+        margin: 0.3%;
+        width: 47.5%;
+        padding: 1.8%;
+    }
+    .encriptador2 {
+        width: 80%;
+        height: 15%;
+        left: 10%;
+        top: 80%;
+    }
+    .encriptador2 img {
+        top: 0;
+        display: none;
+        visibility: hidden;
+      
+    }
+    .encriptador__mensaje {
+        width: 100%;
+        top: 5%;
+    }
+  }
+
